# parcomp-project-ws17

./: .gitignore  CMakeLists.txt
doc/: project_documentation.tex
lib/: CMakeLists.txt
lib/cilk/: CMakeLists.txt  main.c
lib/cilk/pc_stencil/: cilk_stencil.c  cilk_stencil.h
lib/core/: CMakeLists.txt
lib/core/pc_stencil/: core.c  core.h  utils.c  utils.h
lib/mpi/: CMakeLists.txt  main.c
lib/mpi/pc_stencil/: mpi_stencil.c  mpi_stencil.h
lib/openmp/: CMakeLists.txt  main.c
lib/openmp/pc_stencil/: openmp.c  openmp.h
lib/sequential/: CMakeLists.txt  main.c
lib/sequential/pc_stencil/: sequential.c  sequential.h
resources/: output_benchmarks_jupiter.txt  output_benchmarks_saturn.txt
src/: sequential.h
src/main/c/core/: core.c  core.h
src/main/c/sequential/: sequential.c  sequential.h
src/main/resources/: input_format.txt
src/test/c/: data_generator.c  test.c
src/test/python/: stencil.py
tests/: CMakeLists.txt  openmp_test.c  parser_test.c  stencil_test.c
util/: CMakeLists.txt  datagen.sh  parser_test.sh  stencil-test.sh
util/data_generator/: data_generator.c
util/py_stencil/: stencil.py
